// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.force.multilevel.acceptance given: [case1] force at a non-terminal level withholds approval when: [t0] initial pass attempted (l1 rejects, l3 queued) then: snapshot shows the l1-blocked initial pass 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.given.by_peer.basic-checker.md
   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.taken.by_self.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 0/5)
   │   └─ awaits arrival
   │
   ├─ ✗ judge.1 - blocked [TIME]
   │
   └─ ✗ judge.2 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0); wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.feature*.md
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 1/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.given.by_peer.basic-checker.md
      │   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.taken.by_self.basic-checker.md
      │   └─ r2: premium-checker (l3, 0/5)
      │       └─ awaits l1 terminal
      └─ judges
          ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 0
          │   ├─ finished [TIME] ✗
          │   └─ reason: blockers exceed threshold (1 > 0)
          └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.force.multilevel.acceptance given: [case1] force at a non-terminal level withholds approval when: [t1] human forces while l1 is the active level then: snapshot shows overrule only, approval withheld 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.feature
   └─ ✓ forced
      └─ overruled = ✓ (level 1)
"
`;

exports[`driver.route.force.multilevel.acceptance given: [case2] force at the terminal level grants approval when: [t0] force l1 then pass so l3 becomes active then: snapshot shows l3 active, blocked on the approval gate 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.given.by_peer.basic-checker.md
   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.taken.by_self.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 1/5)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.given.by_peer.premium-checker.md
   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.taken.by_self.premium-checker.md
   │
   ├─ ✓ judge.1 - allowed [TIME]
   │
   └─ ✗ judge.2 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      │   └─ $route/1.feature*.md
      ├─ reviews
      │   ├─ r1: basic-checker (l1, 1/5)
      │   │   ├─ rejected [TIME]
      │   │   ├─ overruled ✓ — forgiven by human
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.given.by_peer.basic-checker.md
      │   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.taken.by_self.basic-checker.md
      │   └─ r2: premium-checker (l3, 1/5)
      │       ├─ approved [TIME]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.given.by_peer.premium-checker.md
      │       └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.taken.by_self.premium-checker.md
      └─ judges
          ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 0
          │   └─ finished [TIME] ✓
          └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [TIME] ✗
              └─ reason: wait for human approval
"
`;

exports[`driver.route.force.multilevel.acceptance given: [case2] force at the terminal level grants approval when: [t1] human forces to grant the approval gate (l3 already merit-approved) then: snapshot shows approval granted, no spurious l3 overrule 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.feature
   └─ ✓ forced
      └─ approved  = ✓
"
`;

exports[`driver.route.force.multilevel.acceptance given: [case2] force at the terminal level grants approval when: [t2] pass after terminal force succeeds then: snapshot shows the passed stone after terminal force 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: basic-checker (l1, 1/5)
   │   ├─ rejected, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.given.by_peer.basic-checker.md
   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.taken.by_self.basic-checker.md
   │
   ├─ r2: premium-checker (l3, 1/5)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.given.by_peer.premium-checker.md
   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.taken.by_self.premium-checker.md
   │
   ├─ ✓ judge.1 - allowed (cached)
   │
   └─ ✓ judge.2 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ passage = overruled
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.feature*.md
   │  ├─ reviews
   │  │   ├─ r1: basic-checker (l1, 1/5)
   │  │   │   ├─ rejected, cached
   │  │   │   ├─ overruled ✓ — forgiven by human
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.given.by_peer.basic-checker.md
   │  │   │   └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r001._.taken.by_self.basic-checker.md
   │  │   └─ r2: premium-checker (l3, 1/5)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.given.by_peer.premium-checker.md
   │  │       └─ taken: .reviews/peer/1.feature._.review.i001.512808e604bda1dfc3.r002._.taken.by_self.premium-checker.md
   │  └─ judges
   │      ├─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 0
   │      │   └─ · cached
   │      │      └─ on $route/1.feature*.md
   │      └─ j2: rhx route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ · cached
   │             └─ on $route/1.feature*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.force.multilevel.acceptance given: [case3] robot cannot force (negative path) when: [t0] robot runs --as forced (non-TTY, production) then: snapshot shows the robot-force rejection 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.feature
   ├─ ✗ only humans can force
   │
   └─ as a driver, you should:
         ├─ \`--as passed\` to signal work complete, proceed
         ├─ \`--as arrived\` to signal work complete, request review
         └─ \`--as blocked\` to escalate if stuck

      the human will run \`--as forced\` when ready.
"
`;
